loginpage.css
@import url('https://fonts.googleapis.com/css?family=Poppins');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    background: #000 !important;
}

.login-box{
    position: relative;
    width: 450px;
    height: 400px;
    background: red;
    border-radius: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
}

h2{
    font-size: 2em;
    text-align: center;
    color: #fff;
}

.input-box{
    position: relative;
    width: 310px;
    margin: 30px 0;
    border-bottom: 2px solid #fff;
}

.input-box label{
    position: absolute;
    top: 50%;
    left: 5px;
    transform: translateY(-50%);
    font-size: 1em;
    pointer-events: none;
    color: #fff;
    
}
.input-box input{
    width: 100%;
    background: transparent;
    outline: none;
    border: none;
    font-size: 1em;
    color: #fff;

}

.input-box .icon{
    position: absolute;
    right: 8px;
    

}

